# CavEX

./: .gitignore  CMakeLists.txt  README.md  config.json  meta.xml
assets/model/: playe_alex.geo.json
libraries/cNBT/: CMakeLists.txt
libraries/cNBT/source/: buffer.c  nbt_loading.c  nbt_parsing.c  nbt_treeops.c  nbt_util.c
libraries/cglm/: CMakeLists.txt
libraries/lodepng/: CMakeLists.txt
libraries/log/: CMakeLists.txt  log.c
libraries/parson/: CMakeLists.txt
source/: boot.c  boot.h  chunk.h  config.h  daytime.h  main.c  particle.h  stb_ds.c  util.c  util.h  world.h
source/block/: block_furnace.c  block_workbench.c
source/entity/: entity.h  entity_item.c
source/event/: event.c  event.h
source/game/: camera.c  camera.h
source/game/gui/: screen.h  screen_container_common.c  screen_container_common.h  screen_crafting.c  screen_furnace.c  screen_ingame.c  screen_inventory.c  screen_select_world.c
source/graphics/: gfx_util.h  gui_util.c  gui_util.h  render_block.h  render_item.h  render_model.c  render_model.h
source/graphics/model/: bedrock_geometry.c  bedrock_geometry.h  bedrock_uv_mapper.c  bedrock_uv_mapper.h
source/item/: inventory.h  items.h
source/network/: client_interface.c  client_interface.h  level_archive.c  level_archive.h  region_archive.c  region_archive.h  server_local.c  server_local.h  server_world.c  server_world.h
source/platform/: gfx.h  input.c  texture.c  texture.h  time.c
source/platform/pc/: gfx.c  (+1 more)
test/: CMakeLists.txt  event.test.c
test/source/: bedrock_model.test.c  bedrock_uv_mapper.test.c  event.test.c
(+15 files in other folders)
